<resources>
    <string name="app_name">Notes</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="courses">Courses</string>
    <string name="show_all">Show all</string>
    <string name="todos">To-dos</string>
    <string name="notes">Notes</string>
    <string name="settings_button">Settings button</string>
    <string name="add_todo_button">Add todo button</string>
    <string name="add_note_button">Add note button</string>
    <string name="add_course_button">Add course button</string>
    <string name="add_button">Add button</string>
    <string name="course">Course</string>
    <string name="options">options</string>
    <string name="home">Home</string>
    <string name="item">Item</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="profile">Profile</string>
    <string name="add_course">Add Course</string>
    <string name="edit_course">Edit Course</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="delete_all_courses">Delete all courses</string>
    <string name="add_todo">Add Todo</string>
    <string name="todo">Todo</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="course_title">Course title</string>
    <string name="delete_completed_todos">Delete completed to-dos</string>
    <string name="delete_completed_todo">Delete completed to-do</string>
    <string name="delete_all_todos">Delete all todos</string>
    <string name="note_title">Note title</string>
    <string name="note_content">Note content</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_all_bookmarks">Delete all BookMarks</string>
    <string name="delete">Delete</string>
    <string name="all_bookmark_delete_dialog_message">Are you sure you want to delete all BookMarked Notes? This action cannot be undone.</string>
    <string name="all_course_delete_dialog_message">Deleting all courses will also delete all notes. Are you sure you want to delete all Courses? This action cannot be undone.</string>
    <string name="course_delete_dialog_message">Deleting a course will delete any note related to it. Are you sure you want to delete this course? This action cannot be undone</string>
    <string name="all_note_delete_dialog_message">Are you sure you want to delete all Notes? This action cannot be undone.</string>
    <string name="note_delete_dialog_message">Are you sure you want to delete this Note? This action cannot be undone.</string>
    <string name="bookmark_delete_dialog_message">Are you sure you want to delete this Bookmark? This action cannot be undone.</string>
    <string name="all_todo_delete_dialog_message">Are you sure you want to delete all To-dos? This action cannot be undone.</string>
    <string name="completed_todo_delete_dialog_message">Are you sure you want to delete all completed To-dos? This action cannot be undone.</string>
    <string name="edit_todo">Edit Todo</string>
    <string name="check_gpa">Check GPA</string>
    <string name="units">Units</string>
    <string name="marks">Marks</string>
    <string name="total_load_unit_tlu">Total Load Unit (TLU)</string>
    <string name="grade_point_average_gpa">Grade Point Average (GPA)</string>
    <string name="result">Result</string>
    <string name="related_notes">Related notes</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="course_unit">Course unit</string>
    <string name="course_code">Course code</string>
    <string name="mark">Mark</string>
    <string name="get_started">Get Started</string>
    <string name="view_pager_title_notes">Jot down Notes</string>
    <string name="view_pager_description_notes">Jotting down notes is now much easier and faster like never before</string>
    <string name="view_pager_title_report">Calculate your GPA</string>
    <string name="view_pager_description_report">Have a look at what your GPA might look like before your result get released</string>
    <string name="view_pager_title_course">Save semester Courses</string>
    <string name="view_pager_description_courses">Save your courses for the semester and have them with you on the go</string>
    <string name="view_pager_description_todos">Make a list of To-dos or Task so you can remember to always perform them</string>
    <string name="select_a_course">Select a course</string>
    <string name="no_course">No course</string>
    <string name="view_pager_title_todo">Add To-dos</string>
    <string name="name">Name</string>
    <string name="school">School</string>
    <string name="department">Department</string>
    <string name="level">Level</string>
    <string name="change_profile_image_button">Change profile image button</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_school">Enter school</string>
    <string name="enter_department">Enter department</string>
    <string name="enter_level">Enter level</string>
    <string name="select_level">Select level</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="user_level_field">User level field</string>
    <string name="user_name_field">User name field</string>
    <string name="user_school_field">User school field</string>
    <string name="update">Update</string>
    <string name="add_a_todo">Add a todo</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="note_saved">Note saved</string>
    <string name="dark_mode">DarkMode</string>
    <string name="night_mode">NightMode</string>
    <string name="light_mode">LightMode</string>
    <string name="user_department_field">User department field</string>
    <string name="you_haven_t_added_any_notes_yet_click_the_button_below_to_add_a_new_note">You haven\'t added any notes yet. Click the button below to add a new note.</string>
    <string name="you_haven_t_added_any_courses_yet_click_the_button_below_to_add_a_new_note">You haven\'t added any courses yet. Click the button below to add a new course.</string>
    <string name="you_haven_t_added_any_todos_yet_click_the_button_below_to_add_a_new_note">You haven\'t added any todos yet. Click the button below to add a new todo.</string>
    <string name="welcome_to_notes">Welcome to Notes</string>
    <string name="notification_message">Hey there, don\'t forget to add your notes</string>
    <string name="notes_reminder_notification">Notes reminder notification</string>
    <string name="notes_notification">Notes Notification</string>
    <string name="ok">OK</string>
    <string name="notes_reminder">Notes reminder</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_department">Edit Department</string>
    <string name="edit_school">Edit School</string>
    <string name="enter_score_for">"Enter score for "</string>
    <string name="please_input_a_score">Please input a score</string>
    <string name="please_input_a_valid_score">Please input a valid score</string>
    <string name="score_not_changed">Score not changed</string>
    <string name="delete_completed_todo_message">This todo has been marked as done. Would you like to delete it?</string>
    <string name="nil">NIL</string>
    <string name="course_not_changed">Course not changed</string>
    <string name="no_related_notes">No related notes</string>
    <string name="note_not_changed">Note not changed</string>
    <string name="todo_not_changed">Todo not changed</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account_for_syncing_across_devices">Create an account for syncing across devices</string>
    <string name="first_name_amp_last_name"><![CDATA[First Name & Last Name]]></string>
    <string name="email">Email</string>
    <string name="name_example_etceteria_com">name@example.etceteria.com</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="min_8_characters">Min. 8 Characters</string>
    <string name="remember_me">Remember me</string>
    <string name="have_an_account_already">Have an account already?</string>
    <string name="login_here">Login here</string>
    <string name="login">Login</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account">Create an account</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="access_all_your_saved_files_in_the_cloud">Access all your saved files in the cloud</string>
    <string name="or_sign_in_with_email">or Sign in with Email</string>
    <string name="not_now">Not now</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_up_with_email">Sign up with Email</string>
</resources>