<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.login.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.login.LoginFragment">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/shapeableImageView_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logo" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/shapeableImageView_logo"
                app:layout_constraintTop_toBottomOf="@+id/shapeableImageView_logo" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/access_all_your_saved_files_in_the_cloud"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="@+id/materialTextView"
                app:layout_constraintStart_toStartOf="@+id/materialTextView"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_facebook"
                style="@style/Widget.Notes.LoginTextButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/sign_in_with_facebook"
                android:textAllCaps="false"
                android:textSize="@dimen/_11ssp"
                app:cornerRadius="@dimen/_4sdp"
                app:icon="@drawable/facebook_logo"
                app:iconGravity="textStart"
                app:iconTint="@null"
                app:layout_constraintEnd_toEndOf="@+id/materialTextView2"
                app:layout_constraintStart_toStartOf="@+id/materialTextView2"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView2"
                app:strokeWidth="@dimen/_1sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_google"
                style="@style/Widget.Notes.LoginTextButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/sign_in_with_google"
                android:textAllCaps="false"
                android:textSize="@dimen/_11ssp"
                app:cornerRadius="@dimen/_4sdp"
                app:icon="@drawable/google_logo"
                app:iconGravity="textStart"
                app:iconTint="@null"
                app:layout_constraintEnd_toEndOf="@+id/btn_facebook"
                app:layout_constraintStart_toStartOf="@+id/btn_facebook"
                app:layout_constraintTop_toBottomOf="@+id/btn_facebook"
                app:strokeWidth="@dimen/_1sdp" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="@+id/materialTextView5"
                app:layout_constraintEnd_toStartOf="@+id/materialTextView5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/btn_google"
                app:layout_constraintTop_toTopOf="@+id/materialTextView5" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/or_sign_in_with_email"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toStartOf="@+id/divider1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toBottomOf="@+id/btn_google" />

            <View
                android:id="@+id/divider1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="@+id/materialTextView5"
                app:layout_constraintEnd_toEndOf="@id/btn_google"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/materialTextView5"
                app:layout_constraintTop_toTopOf="@+id/materialTextView5" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/email"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/btn_google"
                app:layout_constraintStart_toStartOf="@+id/btn_google"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_email_layout"
                style="@style/Widgets.Notes.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:boxCollapsedPaddingTop="4dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_email"
                app:layout_constraintStart_toStartOf="@+id/tv_email"
                app:layout_constraintTop_toBottomOf="@id/tv_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/Widget.Notes.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/name_example_etceteria_com"
                    android:inputType="textEmailAddress"
                    android:outlineProvider="none"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    app:textInputLayoutFocusedRectEnabled="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/password"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/btn_google"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/btn_google"
                app:layout_constraintTop_toBottomOf="@+id/et_email_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_password_layout"
                style="@style/Widgets.Notes.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:boxCollapsedPaddingTop="4dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_password"
                app:layout_constraintStart_toStartOf="@+id/tv_email"
                app:layout_constraintTop_toBottomOf="@+id/tv_password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/Widget.Notes.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/min_8_characters"
                    android:inputType="textPassword"
                    android:outlineProvider="none"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    app:textInputLayoutFocusedRectEnabled="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkBox_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="?attr/colorPrimary"
                android:text="@string/remember_me"
                app:layout_constraintStart_toStartOf="@+id/et_password_layout"
                app:layout_constraintTop_toBottomOf="@+id/et_password_layout" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/checkBox_remember_me"
                app:layout_constraintEnd_toEndOf="@+id/et_password_layout"
                app:layout_constraintTop_toTopOf="@+id/checkBox_remember_me" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/Widget.Notes.Button"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="@dimen/_11ssp"
                app:cornerRadius="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="@+id/tv_forgot_password"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/checkBox_remember_me"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_remember_me" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_not_now"
                style="@style/Widget.Notes.TextButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:width="@dimen/_1sdp"
                android:text="@string/not_now"
                android:textAllCaps="false"
                android:textSize="@dimen/_11ssp"
                app:cornerRadius="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="@+id/btn_login"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/btn_login"
                app:layout_constraintTop_toBottomOf="@+id/btn_login"
                app:strokeColor="@color/accent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:text="@string/not_registered_yet"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toStartOf="@+id/tv_create_an_account"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_not_now" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_create_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/create_an_account"
                android:textColor="@color/accent"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/materialTextView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/materialTextView4"
                app:layout_constraintTop_toTopOf="@+id/materialTextView4" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>